--- a/sdk/src/DocuSign.WebForms/DocuSign.WebForms.csproj
+++ b/sdk/src/DocuSign.WebForms/DocuSign.WebForms.csproj
@@ -16,7 +16,7 @@
     <RootNamespace>DocuSign.WebForms</RootNamespace>
     <AssemblyName>DocuSign.WebForms</AssemblyName>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <VersionPrefix>1.0.2-rc11</VersionPrefix>
+    <VersionPrefix>1.0.0</VersionPrefix>
     <VersionSuffix/>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -26,7 +26,7 @@
     <PackageLicenseUrl>https://github.com/docusign/docusign-csharp-client/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/docusign/docusign-csharp-client</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageReleaseNotes>[v1.0.2-rc11] - WebForms API v1.1.0-1.0.2 - 2/8/2024</PackageReleaseNotes>
+    <PackageReleaseNotes>[v1.0.0] - WebForms API v1.1.0-1.0.2 - 2/14/2024</PackageReleaseNotes>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(TargetFramework)' == 'net462'">
     <DefineConstants>NET462</DefineConstants>
