--- a/SdkTests/SdkNetCoreTests/SdkNetCoreTests.csproj
+++ b/SdkTests/SdkNetCoreTests/SdkNetCoreTests.csproj
@@ -1,7 +1,7 @@
-﻿	<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp2.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
@@ -12,16 +12,14 @@
 		<PackageReference Include="MSTest.TestFramework" Version="1.2.1" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.3.1" />
+		<PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.5.1" />
 		<PackageReference Include="BouncyCastle.Cryptography" Version="2.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Reference Include="DocuSign.WebForms">
-	    <HintPath>..\..\sdk\src\DocuSign.WebForms\bin\Debug\netstandard2.0\DocuSign.WebForms.dll</HintPath>
-	  </Reference>
+		<Reference Include="DocuSign.WebForms">
+			<HintPath>..\..\sdk\src\DocuSign.WebForms\bin\Debug\netstandard2.0\DocuSign.WebForms.dll</HintPath>
+		</Reference>
 	</ItemGroup>
 
 </Project>
